<resources>
    <string name="app_name">Learning Bottom Navigation Bar Kotlin</string>
    <string name="weight">Weight</string>
    <string name="time">Time</string>
    <string name="temperature">Temperature</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="convert_weight">Convert Weight</string>
    <string name="convert_time">Convert Time</string>
    <string name="Weight">Weight</string>
    <string name="weight_image_description">Weight Image</string>
    <string name="weight_mass">weight (mass)</string>
    <string name="convert">Convert</string>
    <string name="time_image">time image</string>
    <string name="milligrams">milligrams</string>
    <string name="milligram">milligram</string>
    <string name="microgram">microgram</string>
    <string name="gram">gram</string>
    <string name="kilogram">kilogram</string>
    <string name="weight_conversions">Weight Conversions</string>
    <string name="days">days</string>
    <string name="hours">hours</string>
    <string name="seconds">seconds</string>
    <string name="weeks">weeks</string>
    <string name="years">years</string>
    <string name="ton_us">ton (US)</string>
    <string name="stone_uk">stone (UK)</string>
    <string name="ton_uk">ton (UK)</string>
    <string name="time_conversions">Time Conversions</string>
    <string name="reset_weight_records">Reset Weight Records</string>
    <string name="reset_time_records">Reset Time Records</string>
    <string name="reset_temperature_records">Reset Temperature Records</string>
    <string name="reset_all_records">Reset All Records</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="clear_record">Clear Record</string>
    <string name="measurement">Measurement</string>
    <string name="neck_measurement">Neck Measurement</string>
    <string name="hips_measurement">Hips Measurement</string>
    <string name="waist_measurement">Waist Measurement</string>
    <string name="measurement_records">Measurement Records</string>
    <string name="height">Height</string>
    <string name="hips_cm_in">Hips-cm/in</string>
    <string name="waist_cm_in">Waist-cm/in</string>
    <string name="neck_cm_in">Neck-cm/in</string>
    <string name="weight_cm_in">Weight-cm/in</string>
    <string name="height_cm_in">Height-cm/in</string>
    <string name="weight_kg_lb">Weight-kg/lb</string>
</resources>